fixed bug in rating